JobsRefactoring - Update JobsDto in Front-end
